weather app application

--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,14 @@ body{
     min-height: 100vh;
     flex-direction: column;
 }
+
+input{
+    padding: 1rem;
+    border-radius: 25px;
+    border: none;
+    background-color: #fff;
+    font-family: inherit;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    min-width: 300px;
+    font-size: 1rem;
+}
