--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600$display=swap');
-
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+* {
     box-sizing: border-box;
 }
-
-body{
+body {
     margin: 0;
-    font-family: "Poppins",sans-serif;
-    background-color: #d8e6e9;
+    font-family: "Poppins", sans-serif;
+    background-color: linear-gradiet(300deg, #757b87, #909d9d);
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
 }
-
-input{
+input {
     padding: 1rem;
     border-radius: 25px;
     border: none;
@@ -25,18 +22,15 @@ input{
     min-width: 300px;
     font-size: 1rem;
 }
-
-input:focus{
+input:focus {
     outline: none;
 }
-
-.weather{
+.weather {
     text-align: center;
     font-size: 2rem;
 }
-
-.weather h2{
+.weather h2 {
     margin-bottom: 0;
     display: flex;
     align-items: center;
-}
+} /* .weather img{ transform: scale(2); } */
