--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,32 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
-* {
-    box-sizing: border-box;
-}
-body {
-    margin: 0;
-    font-family: "Poppins", sans-serif;
-    background-color: linear-gradiet(300deg, #757b87, #909d9d);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    flex-direction: column;
-}
-input {
-    padding: 1rem;
-    border-radius: 25px;
-    border: none;
-    background-color: #fff;
-    font-family: inherit;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    min-width: 300px;
-    font-size: 1rem;
-}
-input:focus {
-    outline: none;
-}
-.weather {
-    text-align: center;
-    font-size: 2rem;
-}
-.weather h2 {
-    margin-bottom: 0;
-    display: flex;
-    align-items: center;
-} /* .weather img{ transform: scale(2); } */
+/*
+            Loading css animation by tobias ahlin. http://tobiasahlin.com/spinkit/
+            Weather icons by erik flowers. https://erikflowers.github.io/weather-icons/
+            */
+            body {
+                background: #e0e0e0;
+                font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            }
+            a:hover, a:focus {
+                color: inherit;
+                text-decoration: none;
+                opacity: 0.7;
+            }
+            #pMe,#pBy {
+                display: inline-block;
+                margin-left: 5px;
+                margin-top: 20px;
+            }
+            
+            #pMe a {
+                z-index: -1;
+                color: #666666;
+                font-weight: bold;
+                transition: opacity 0.3s ease-in;
+            }
+            #pMe a:hover {
+                opacity: 0.7;
+                text-decoration: none;
+            }
+            #pMe a:visited {
+                color: #666666;
+            }
