--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,14 @@
             #pMe a:visited {
                 color: #666666;
             }
+
+            @keyframes pMe {
+                from { 
+                    -webkit-transform: translate(-50px,0px); opacity: 0;
+                    transform: translate(-50px,0px); opacity: 0;
+                }
+                to { 
+                    -webkit-transform: translate(0px,0px); opacity: 1;
+                    transform: translate(0px,0px); opacity: 1;
+                }
+            }
