--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,25 @@
                     transform: translate(0px,0px); opacity: 1;
                 }
             }
+
+            .bg-primary {
+                background-color: #039be5;
+            }
+            .bg-white {
+                background-color: #FFFFFF;
+            }
+            .text-white {
+                color: #FFFFFF;
+            }
+            .text-light {
+                color: rgba(255, 255, 255, 0.7);
+            }
+            .text-accent {
+                color: #b2ff59;
+            }
+            .text-capitalize {
+                text-transform: capitalize;
+            }
+            .text-shadow {
+                text-shadow: 1px 1px 1px rgba(0,0,0,.4);
+            }
