--- a/css/style.css
+++ b/css/style.css
@@ -97,3 +97,24 @@
                 min-width: 85%;
                 max-width: 90%;
             }
+
+            /* Tooltip text */
+            .tooltiptext {
+                visibility: hidden;
+                width: 100%;
+                background-color: #555;
+                text-align: center;
+                padding: 5px 0;
+                border-radius: 6px;
+
+                /* Position the tooltip text */
+
+                position: absolute;
+                z-index: 1;
+                top: 90%;
+
+                /* Fade in tooltip */
+                opacity: 0;
+                transition: opacity 0.5s;
+            }
+
