--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,27 @@
                 transition: opacity 0.5s;
             }
 
+            /* Tooltip arrow */
+            .tooltiptext::after {
+                position: absolute;
+                top: -12px;
+                left: 20px;
+                content: ' ';
+                border: 6px solid transparent;
+                border-bottom-color: #555;
+            }
+            #location {
+                background-color: transparent;
+                border: none;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+                border-radius: 0;
+                outline: none;
+                width: 100%;
+                margin: 0 0 15px 0;
+                padding: 0;
+                box-shadow: none;
+                box-sizing: content-box;
+                transition: all 0.3s;
+                line-height: 30px;
+            }
+
