--- a/css/style.css
+++ b/css/style.css
@@ -219,4 +219,19 @@
             .card-content p {
                 margin: 0;
             }
+            .days-box {
+                padding: 30px 0;
+                -webkit-box-shadow: 0 3px 15px rgba(0,0,0,0.7);
+                /*box-shadow: 0 0 10px rgba(0,0,0,0.4);*/
+                box-shadow: 0 6px 5px -5px rgba(0,0,0,.5), 0 7px 0 -2px rgb(255, 255, 255), 0 11px 5px -5px rgba(0,0,0,.5), 0 13px 0 -4px rgba(255, 255, 255, 0.7), 0 16px 5px -5px rgba(0, 0, 0, 0.5), 0 20px 0 -8px rgba(255, 255, 255, 0.5);
+            }
+            .days-box .wi {
+                font-size: 2.5em;
+            }
+            .days-box > div {
+                border-left: 1px solid #ddd;
+            }
+            .days-box .day-first {
+                border: none;
+            }
 
